--- a/src/styles/section2.scss
+++ b/src/styles/section2.scss
@@ -6,7 +6,7 @@
 
     &__container {
         display: flex;
-        align-items: flex-end;
+        align-items: flex-start;
         gap: 5em;
         margin: 50px auto;
         padding: 20px;
@@ -17,22 +17,18 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             max-width: 500px;
             height: 500px;
-            border-radius: 12px;
         }
     }
 
     &__content {
         width: 100%;
-        background-color: rgba(213, 255, 241, 0.793);
-        padding: 3em 2em;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-        border-radius: 14px;
+        padding: 1em 2em;
 
 
         &--title {
-            display: block;
+            display: flex;
             color: variaveis.$corTextoSecundario;
-            padding: 0 .5em;
+            padding: 1em 0;
             font-size: 2em;
             text-align: left;
         }
@@ -40,13 +36,32 @@
         p {
             display: flex;
             color: variaveis.$corTextoSecundario;
-            padding: 1em 1em;
+            padding: 1em 0;
             font-size: 1.2em;
             letter-spacing: 1px;
             justify-content: center;
-            text-align:justify;
+            text-align: justify;
             line-height: 2em;
+        }        
+        a {
+            background-color: variaveis.$corFundoHeader;
+            display: inline;
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid #000;
+            padding: 10px 20px; 
+            border-radius: 4px;
+            color: variaveis.$corTextoSecundario;
+            text-decoration: none;
+            text-align: center;
+
+        }
+        a:hover {
+            background-color: rgb(141, 202, 140);
+            color: #000; 
+            cursor: pointer;
+            transition: background-color 0.1s ease;
         }
     }
-    
 }
